--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello world!
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="main.js" type="module"></script>
+    </head>
+    <body>
+        <textarea id="mml"></textarea>
+        <br>
+        <button>submit</button>
+        <br>
+        <span id="LexResult"></span>
+    </body>
+</html>
