--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <textarea id="mml"></textarea>
         <br>
-        <button>submit</button>
+        <button id="submit">submit</button>
         <br>
         <span id="LexResult"></span>
     </body>
