--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <script src="main.js" type="module"></script>
     </head>
     <body>
-        <textarea id="mml"></textarea>
+        <textarea id="mml" scroll style="resize:none; width: 400px; height: 200px;" placeholder="type mml code here"></textarea>
         <br>
         <button id="submit">submit</button>
         <br>
-        <span id="LexResult"></span>
+        <textarea id="LexResult" scroll readonly style="resize:none;width: 400px; height: 200px;"></textarea>
     </body>
 </html>
