virtual piano play

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <div class="Keys">
                     <canvas id="piano" width="760px" height="270px"></canvas>
                 </div>
+                <div class="VolumeSustain">
+                    <canvas id="VolumeSustain" width="760px" height="54px"></canvas>
+                </div>
             </div>
             <div class="Toolbar"></div>
         </div>
