--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="main.js" type="module"></script>
+        <script src="MMLParser.js" type="module"></script>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/reset-css@4.0.1/reset.min.css"
